@@ -96,38 +96,8 @@ func (m *MetricSet) Fetch() ([]common.MapStr, error) {
 		}
 
 		for _, hs := range hst {
-			totalCpu := int64(hs.Summary.Hardware.CpuMhz) * int64(hs.Summary.Hardware.NumCpuCores)
-			freeCpu := int64(totalCpu) - int64(hs.Summary.QuickStats.OverallCpuUsage)
-			freeMemory := int64(hs.Summary.Hardware.MemorySize) - (int64(hs.Summary.QuickStats.OverallMemoryUsage) * 1024 * 1024)
 
-			event := common.MapStr{
-				"datacenter": dc.Name(),
-				"name":       hs.Summary.Config.Name,
-				"cpu": common.MapStr{
-					"used": common.MapStr{
-						"mhz": hs.Summary.QuickStats.OverallCpuUsage,
-					},
-					"total": common.MapStr{
-						"mhz": totalCpu,
-					},
-					"free": common.MapStr{
-						"mhz": freeCpu,
-					},
-				},
-				"memory": common.MapStr{
-					"used": common.MapStr{
-						"bytes": hs.Summary.QuickStats.OverallMemoryUsage * 1024 * 1024,
-					},
-					"total": common.MapStr{
-						"bytes": hs.Summary.Hardware.MemorySize,
-					},
-					"free": common.MapStr{
-						"bytes": freeMemory,
-					},
-				},
-			}
-
-			events = append(events, event)
+			events = append(events, eventMapping(hs, dc.Name()))
 		}
 	}
 
