@@ -52,6 +52,7 @@ https://github.com/elastic/beats/compare/v6.0.0-alpha2...master[Check the HEAD d
 
 - Fix issue affecting Windows services timing out at startup. {pull}4491[4491]
 - Fix incorrect docker.diskio.total metric calculation. {pull}4507[4507]
+- Vsphere module: used memory field corrected. {issue}4461[4461]
 
 *Packetbeat*
 
@@ -182,6 +183,10 @@ https://github.com/elastic/beats/compare/v6.0.0-alpha1...v6.0.0-alpha2[View comm
 - Change Metricbeat default configuration file to be better optimized for most users. {pull}4329[4329]
 - Add experimental RabbitMQ module. {pull}4394[4394]
 - Add Kibana dashboard for the Kubernetes modules. {pull}4138[4138]
+
+*Packetbeat*
+
+*Winlogbeat*
 
 ==== Deprecated
 
